[package]
edition = "2018"
name = "rburg"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "~1.0" #MIT or apache 2.0
quote = "~1.0" #MIT or apache 2.0
syn = {version = "1.0.49", features = ["full", "extra-traits"]}#MIT or apache 2.0
